# reflector

./: Cargo.toml
.github/workflows/: ci.yml
examples/: basic.rs  child_window.rs  counter.rs
reflector-graphics/: Cargo.toml
reflector-graphics/benches/: tiger.rs
reflector-graphics/examples/: svg.rs
reflector-graphics/src/: canvas.rs  color.rs  flatten.rs  geom.rs  lib.rs  path.rs  raster.rs  renderer.rs  text.rs
reflector-graphics/src/simd/: mod.rs
reflector-graphics/svg/: Cargo.toml
reflector-graphics/svg/src/: lib.rs
reflector-platform/: Cargo.toml
reflector-platform/examples/: basic.rs  child_window.rs
reflector-platform/src/: app.rs  error.rs  event_loop.rs  lib.rs  timer.rs  window.rs
reflector-platform/src/backend/cocoa/: app.rs  display_links.rs  event_loop.rs  mod.rs  surface.rs  timer.rs  window.rs
reflector-platform/src/backend/cocoa/ffi/: io_surface.rs  layer.rs  mod.rs
reflector-platform/src/backend/win32/: app.rs  dpi.rs  event_loop.rs  mod.rs  timer.rs  vsync.rs  window.rs
reflector-platform/src/backend/x11/: app.rs  event_loop.rs  mod.rs  timer.rs  window.rs
src/: any.rs  app.rs  build.rs  elem.rs  error.rs  geom.rs  lib.rs  list.rs  macos.rs  proc.rs  timer.rs  window.rs  windows.rs  x11.rs
src/backend/: mod.rs
src/backend/cocoa/: app.rs  display_links.rs  ffi.rs  mod.rs  surface.rs  timer.rs  window.rs
src/backend/cocoa/ffi/: display_link.rs  layer.rs  mod.rs
src/backend/win32/: app.rs  dpi.rs  mod.rs  timer.rs  vsync.rs  window.rs
src/backend/x11/: app.rs  error.rs  mod.rs  timer.rs  window.rs
src/elem/: button.rs  padding.rs  row.rs  text.rs
src/elems/: button.rs  mod.rs  padding.rs  row.rs  text.rs
