[package]
name = "reflector"
version = "0.1.0"
authors = ["Micah Johnston <micah@photophore.systems>"]
edition = "2021"
publish = false

[dependencies]
reflector-platform = { path = "reflector-platform" }
reflector-graphics = { path = "reflector-graphics" }

[workspace]
members = [
    "reflector-platform",
    "reflector-graphics",
    "reflector-graphics/svg",
]
