[package]
name = "reflector-graphics"
version = "0.1.0"
authors = ["Micah Johnston <micah@photophore.systems>"]
edition = "2021"
publish = false

[dependencies]
rustybuzz = "0.11.0"

[dev-dependencies]
svg = { path = "svg" }
criterion = { version = "0.3", features = ["html_reports"] }
reflector-platform = { path = "../reflector-platform" }

[[bench]]
name = "tiger"
harness = false

